--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Secret Agent Supply Inc</title>
-    <link href=".resources/css/reset.css" style="text/css" rel="stylesheet">
-    <link href=".resources/css/style.css" style="text/css" rel="stylesheet">
+    <link href="resources/css/reset.css" style="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" style="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello</h1>
