--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
     <link href="resources/css/style.css" style="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="header">
+      SECRET AGENT SUPPLY INC.
+    </div>
+
+    <div class="newArrival">
+      <p>NEW ARRIVAL</p>
+      <p>SPORT BIKES AND MOTORCYCLES</p>
+    </div>
+    <div>
+      <p>Menu</p>
+      <p>Eyewear
+        Apparel
+        Gadgets
+        Vehicles
+        Classes
+        Contact</p>
+    </div>
+
+    <div class="three">
+      Exploding Pen
+    </div>
+
+    <div class="three">
+      Cellular Watch
+    </div>
+
+    <div class="three">
+      Thermal Glasses
+    </div>
+
+    <div class="location">
+      <p>Location</p>
+      <p>47.346436, 84.32354</p>
+    </div>
+
+    <div class="hours">
+      <p>Hours</p>
+      <p>0800 - 1800</p>
+    </div>
+
+    <div class="footer">
+      <p>Copyright Secret Agent Supply Inc.<p/>
+    </div>
 
   </body>
 </html>
