--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <link href="resources/css/reset.css" style="text/css" rel="stylesheet">
     <link href="resources/css/style.css" style="text/css" rel="stylesheet">
   </head>
+
   <body>
+    <!--header division-->
     <div class="header">
-      SECRET AGENT SUPPLY INC.
+      <img class="logo" src="resources/images/logo.png">
+      <h2>SECRET AGENT SUPPLY INC.</h2>
     </div>
 
-    <div class="newArrival">
+    <div class="new-arrival">
       <p>NEW ARRIVAL</p>
       <p>SPORT BIKES AND MOTORCYCLES</p>
     </div>
