--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
       <h2>SECRET AGENT SUPPLY INC.</h2>
     </div>
 
+    <!--new-arrival division-->
     <div class="new-arrival">
-      <p>NEW ARRIVAL</p>
-      <p>SPORT BIKES AND MOTORCYCLES</p>
+      <div class="inside-new-arrival">
+        <p>NEW ARRIVAL</p>
+        <p>SPORT BIKES AND MOTORCYCLES</p>
+      </div>
     </div>
-    <div>
-      <p>Menu</p>
+
+    <!--red-navigation division-->
+    <div class="red-navigation">
       <p>Eyewear
         Apparel
         Gadgets
@@ -28,17 +32,23 @@
         Contact</p>
     </div>
 
-    <div class="three">
-      Exploding Pen
+    <!-- three division pen, watch, glasses-->
+    <div class="all-three">
+      <div class="three">
+        <p>Exploding Pen</p>
+      </div>
+
+      <div class="three">
+        Cellular Watch
+      </div>
+
+      <div class="three">
+        Thermal Glasses
+      </div>
+
     </div>
 
-    <div class="three">
-      Cellular Watch
-    </div>
 
-    <div class="three">
-      Thermal Glasses
-    </div>
 
     <div class="location">
       <p>Location</p>
