save images for three div

--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@
     <!-- three division pen, watch, glasses-->
     <div class="all-three">
       <div class="three">
+        <img src="resources/images/pen.png">
         <p>Exploding Pen</p>
       </div>
 
       <div class="three">
-        Cellular Watch
+        <img src="resources/images/watch.png">
+        <p>Cellular Watch</p>
       </div>
 
       <div class="three">
-        Thermal Glasses
+        <img src="resources/images/glasses.png">
+        <p>
+        Thermal Glasses</p>
       </div>
-
     </div>
 
 
