begin style header div

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Contact</p>
     </div>
 
-    <!-- three division pen, watch, glasses-->
+    <!-- all-three division pen, watch, glasses-->
     <div class="all-three">
       <div class="three">
         <img src="resources/images/pen.png">
@@ -51,11 +51,10 @@
       </div>
     </div>
 
-
-
-    <div class="location">
-      <p>Location</p>
-      <p>47.346436, 84.32354</p>
+    <!--info division-->
+    <div class="info">
+      <div class="location">Location</div>
+      <div class="hours">47.346436, 84.32354</div>
     </div>
 
     <div class="hours">
@@ -63,6 +62,7 @@
       <p>0800 - 1800</p>
     </div>
 
+    <!--footer division-->
     <div class="footer">
       <p>Copyright Secret Agent Supply Inc.<p/>
     </div>
