style new arrival

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <!--new-arrival division-->
     <div class="new-arrival">
       <div class="inside-new-arrival">
-        <p>NEW ARRIVAL</p>
-        <p>SPORT BIKES AND MOTORCYCLES</p>
+        <div class="inside-new">
+          <p class="new-header">NEW ARRIVAL</p>
+          <p class="new-body">SPORT BIKES AND MOTORCYCLES</p>
+        </div>
       </div>
     </div>
 
