--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
     <!--red-navigation division-->
     <div class="red-navigation">
-      <p>Eyewear
-        Apparel
-        Gadgets
-        Vehicles
-        Classes
-        Contact</p>
+      <p class="inside-red">Eyewear</p>
+      <p class="inside-red">Apparel</p>
+      <p class="inside-red">Gadgets</P>
+      <p class="inside-red">Vehicles</p>
+      <p class="inside-red">Classes</p>
+      <p class="inside-red">Contact</p>
     </div>
 
     <!-- all-three division pen, watch, glasses-->
