style size of three img

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
     <!-- all-three division pen, watch, glasses-->
     <div class="all-three">
-      <div class="three">
-        <img src="resources/images/pen.png">
-        <p>Exploding Pen</p>
+      <div class="three-box">
+        <img class="three-img" src="resources/images/pen.png">
+        <p class="three-p">Exploding Pen</p>
       </div>
 
-      <div class="three">
-        <img src="resources/images/watch.png">
-        <p>Cellular Watch</p>
+      <div class="three-box">
+        <img class="three-img" src="resources/images/watch.png">
+        <p class="three-p">Cellular Watch</p>
       </div>
 
-      <div class="three">
-        <img src="resources/images/glasses.png">
-        <p>
+      <div class="three-box">
+        <img class="three-img" src="resources/images/glasses.png">
+        <p class="three-p">
         Thermal Glasses</p>
       </div>
     </div>
