--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="three-box">
-        <img class="three-img" src="resources/images/glasses.png">
+        <img class="three-img glass" src="resources/images/glasses.png">
         <p class="three-p">
         Thermal Glasses</p>
       </div>
