info container begin

--- a/index.html
+++ b/index.html
@@ -55,19 +55,25 @@
 
     <!--info division-->
     <div class="info">
-      <div class="location">Location</div>
-      <div class="hours">47.346436, 84.32354</div>
+      <div class="info-container">
+        <div class="container-header">
+          <p>Location</p>
+        </div>
+        <div class="container-data">
+          <p class="data-color">47.346436, 84.32354</p>
+        </div>
+      </div>
+
+      <div class="info-container">
+        <div class="container-header">
+          <p>Hours</p>
+        </div>
+        <div class="container-data">
+          <p class="data-color">0800-1800</p>
+        </div>
+      </div>
     </div>
 
-    <div class="hours">
-      <p>Hours</p>
-      <p>0800 - 1800</p>
-    </div>
-
-    <!--footer division-->
-    <div class="footer">
-      <p>Copyright Secret Agent Supply Inc.<p/>
-    </div>
 
   </body>
 </html>
