--- a/index.html
+++ b/index.html
@@ -75,5 +75,11 @@
     </div>
 
 
+
   </body>
+  <footer>
+    <div class="footer">
+      <p>Copyright Secret Agent Supply Inc.<p/>
+    </div>
+  </footer>
 </html>
