--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <p class="inside-red">Contact</p>
     </div>
 
+    <div class="red-navigation-two">
+      <p class="inside-red">Menu</p>
+    </div>
+
     <!-- all-three division pen, watch, glasses-->
     <div class="all-three">
       <div class="three-box">
@@ -46,7 +50,7 @@
         <p class="three-p">Cellular Watch</p>
       </div>
 
-      <div class="three-box">
+      <div class="three-box box-glass">
         <img class="three-img glass" src="resources/images/glasses.png">
         <p class="three-p">
         Thermal Glasses</p>
