--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p class="three-p">Exploding Pen</p>
       </div>
 
-      <div class="three-box">
+      <div class="three-box box-watch">
         <img class="three-img" src="resources/images/watch.png">
         <p class="three-p">Cellular Watch</p>
       </div>
